# flutzPlayer

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build-dat.ps1  build-init.ps1  build.ps1
.github/workflows/: release.yml
assets/: dat-manifest.toml  multi-font-presets.toml
assets/eq-presets/: Default.fpeq  Flat.fpeq
crates/flutz_app/: Cargo.toml  build.rs
crates/flutz_app/examples/: association_probe.rs  content_dispatch_probe.rs  dat_runtime_json_probe.rs  decoded_stream_playback_probe.rs  envelope_window_probe.rs  memory_decay_policy_probe.rs  memory_playback_probe.rs  memory_probe.rs  memory_reload_probe.rs  memory_runtime_probe.rs  open_save_dispatch_probe.rs  partial_catalog_probe.rs  phase5_peq_ui_state_probe.rs  playlist_persistence_probe.rs  playlist_probe.rs  render_error_probe.rs  render_window_probe.rs  voice_window_probe.rs
crates/flutz_app/src/: allocation_trace.rs  lib.rs  main.rs  memory_runtime.rs  perf_trace.rs  playback.rs  routing.rs  windows_file_association.rs
crates/flutz_app/src/app/: mod.rs
crates/flutz_app/src/playlist/: mod.rs  persistence.rs
crates/flutz_app/src/project/: mod.rs
crates/flutz_app/src/ui/: debug.rs  metadata_popup.rs  mod.rs  playlist_window.rs  release.rs  theme.rs
crates/flutz_audio_sdl3/: Cargo.toml
crates/flutz_audio_sdl3/examples/: sdl_audio_probe.rs
crates/flutz_audio_sdl3/src/: callback.rs  device.rs  diagnostics.rs  lib.rs  ring_buffer.rs  stream.rs
crates/flutz_audio_sdl3/tests/: ring_buffer.rs
crates/flutz_audio_wasapi/: Cargo.toml
crates/flutz_audio_wasapi/src/: lib.rs
crates/flutz_core/: Cargo.toml  build.rs
crates/flutz_core/src/: errors.rs  ids.rs  lib.rs  presets.rs  project_model.rs  time.rs
crates/flutz_dat/: Cargo.toml
crates/flutz_dat/examples/: dat_json_range_probe.rs  soundfont_json_probe.rs
crates/flutz_dat/src/: assets.rs  lib.rs  manifest.rs  read.rs  registry.rs  soundfont_json.rs  write.rs
crates/flutz_fmid/: Cargo.toml
crates/flutz_fmid/src/: chunks.rs  lib.rs  read.rs  records.rs  write.rs
crates/flutz_format_aac/: Cargo.toml
crates/flutz_format_aac/examples/: decode_probe.rs
crates/flutz_format_aac/src/: lib.rs
crates/flutz_format_flac/: Cargo.toml
crates/flutz_format_flac/examples/: decode_probe.rs
crates/flutz_format_flac/src/: lib.rs
crates/flutz_format_mp3/: Cargo.toml
crates/flutz_format_mp3/examples/: decode_probe.rs
crates/flutz_format_mp3/src/: lib.rs
crates/flutz_format_ogg/: Cargo.toml
crates/flutz_format_ogg/examples/: decode_probe.rs
crates/flutz_format_ogg/src/: lib.rs
crates/flutz_format_pcm/: Cargo.toml
crates/flutz_format_pcm/examples/: decode_probe.rs
crates/flutz_format_pcm/src/: lib.rs
crates/flutz_formats/: Cargo.toml
crates/flutz_formats/examples/: decoded_loop_probe.rs  decoded_playback_probe.rs  decoded_stream_probe.rs  format_registry_probe.rs  wrapper_roundtrip_probe.rs
crates/flutz_formats/src/: decode.rs  lib.rs  model.rs  registry.rs  wrapper.rs
crates/flutz_mixer/: Cargo.toml
crates/flutz_mixer/examples/: mixer_probe.rs
crates/flutz_mixer/src/: lib.rs  master.rs  meters.rs  normalization.rs  smart_mix.rs  strip.rs
crates/flutz_mixer/src/effects/: mod.rs
crates/flutz_peq/: Cargo.toml
crates/flutz_peq/examples/: peq_probe.rs
crates/flutz_peq/src/: lib.rs
crates/flutz_soundfont_tools/: Cargo.toml
crates/flutz_soundfont_tools/examples/: metadata_index_closure_probe.rs  range_fetch_and_assemble_probe.rs  sfark_diagnostics.rs  soundfont_json_pack_probe.rs
crates/flutz_soundfont_tools/src/: cli.rs  compare_rustysynth.rs  convert.rs  detect.rs  lib.rs  main.rs  sfark.rs  soundfont_json_pack.rs
crates/flutz_synth/: Cargo.toml
crates/flutz_synth/examples/: subset_cache_probe.rs
crates/flutz_synth/src/: lib.rs  midi_timeline.rs  playback.rs  rustysynth_renderer.rs  seek.rs  soundfont_runtime.rs
crates/flutz_visualizer_core/: Cargo.toml
crates/flutz_visualizer_core/examples/: analyzer_probe.rs
crates/flutz_visualizer_core/src/: lib.rs
crates/flutz_visualizer_egui/: Cargo.toml
crates/flutz_visualizer_egui/src/: lib.rs
crates/rustystem/: Cargo.toml  Cargo.toml.orig  README.md
crates/rustystem/examples/: compact_font_render_probe.rs  compact_subset_font_builder_probe.rs  metadata_closure_probe.rs  metadata_compact_subset_probe.rs  metadata_only_parser_probe.rs  stem_api_probe.rs  stem_parity_probe.rs
crates/rustystem/src/: channel.rs  instrument.rs  instrument_region.rs  lib.rs  midi_interpretation.rs  midifile.rs  midifile_sequencer.rs  oscillator.rs  preset.rs  sample_header.rs  soundfont.rs  soundfont_coverage.rs  soundfont_info.rs  soundfont_sampledata.rs  soundfont_version.rs  stem.rs  synthesizer.rs  voice.rs  voice_collection.rs  volume_envelope.rs
docs/: file-formats.md  project-layout.md
encoded-audio/: get-test-files.ps1
gh/: Get-GhSoundfonts.ps1  Invoke-GhReleaseBuild.ps1  Package-GhDatAssets.ps1  Package-GhRelease.ps1  Prepare-GhVendor.ps1
soundfonts/: get-fonts.ps1
tools/dat-packer/: pack-dat.ps1
