[package]
name = "flutzplayer"
version = "0.1.0"
edition.workspace = true

[lib]
name = "flutz_app"

[dependencies]
flutz_audio_sdl3 = { path = "../flutz_audio_sdl3" }
flutz_audio_wasapi = { path = "../flutz_audio_wasapi" }
flutz_core = { path = "../flutz_core" }
flutz_dat = { path = "../flutz_dat" }
flutz_fmid = { path = "../flutz_fmid" }
flutz_formats = { path = "../flutz_formats" }
flutz_mixer = { path = "../flutz_mixer" }
flutz_peq = { path = "../flutz_peq" }
flutz_synth = { path = "../flutz_synth" }
flutz_visualizer_core = { path = "../flutz_visualizer_core" }
flutz_visualizer_egui = { path = "../flutz_visualizer_egui" }
rustystem = { path = "../rustystem" }
eframe = "0.33.3"
egui = "0.33.3"
damascene-fonts = { version = "0.4.2", default-features = false, features = ["jetbrains-mono", "symbols"] }
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tikv-jemallocator = { version = "0.6", optional = true }
tikv-jemalloc-ctl = { version = "0.6", optional = true, features = ["stats", "use_std"] }
tikv-jemalloc-sys = { version = "0.6", optional = true }

[build-dependencies]
ico = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
winresource = "0.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
	"Win32_Foundation",
	"Win32_System_Console",
	"Win32_System_Diagnostics_Debug",
	"Win32_System_Diagnostics_ToolHelp",
	"Win32_System_Memory",
	"Win32_System_ProcessStatus",
	"Win32_System_Registry",
	"Win32_System_Threading",
	"Win32_UI_Shell",
] }

[features]
default = []
jemalloc-memory = ["dep:tikv-jemallocator", "dep:tikv-jemalloc-ctl", "dep:tikv-jemalloc-sys"]
perf-trace = []

[lints]
workspace = true

[[bin]]
name = "flutzplayer"
path = "src/main.rs"
