[package]
name = "flutz_audio_sdl3"
version = "0.1.0"
edition.workspace = true
description = "Reusable SDL3 audio-output wrapper primitives."

[dependencies]
sdl3-sys = { path = "../../vendor/SDL3/sdl3-sys-0.6.2+SDL-3.4.4-spacefix", default-features = false, features = ["build-from-source-static"] }

[lints]
workspace = true
