[package]
name = "flutz_format_mp3"
version = "0.1.0"
edition.workspace = true
description = "MP3 backend registration and Symphonia decode probe support for flutzPlayer."

[dependencies]
flutz_core = { path = "../flutz_core" }
flutz_formats = { path = "../flutz_formats" }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true