[package]
name = "flutz_formats"
version = "0.1.0"
edition.workspace = true
description = "Common playable format registry, capability model, and wrapper records for flutzPlayer."

[dependencies]
flutz_core = { path = "../flutz_core" }
flutz_peq = { path = "../flutz_peq" }
serde = { version = "1", features = ["derive"] }
symphonia = { version = "0.5", features = ["aac", "aiff", "flac", "isomp4", "mp3", "ogg", "pcm", "vorbis", "wav"] }
symphonia-adapter-libopus = "0.2"
toml = "0.8"

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true